New function implemented and methods get adjustments

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 							<div class="form-group row">
 								<label class="col-sm-9 col-form-label">Competência:</label>
 								<div class="col-sm-3">
-									<select class="form-control-plaintext">
+									<select class="form-control-plaintext" id="competencia">
 										<option value="">-- Selecione </option>
 										<option value="2018-08">Agosto / 2018</option>
 										<option value="2018-09">Setembro / 2018</option>
@@ -76,7 +76,7 @@
 								Número de vendas
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="numVendas">?</h5>
 							</div>
 						</div>
 					</div>
@@ -87,7 +87,7 @@
 								Total de vendas
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="totalVendas">?</h5>
 							</div>
 						</div>
 		    		</div>
@@ -101,18 +101,18 @@
 								Clientes ativos
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="activeCli">?</h5>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-md-4">
 		    			<div class="card">
-							<div class="card-header">
+							<div class="card-header" >
 								Clientes inativos
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="inativeCli">?</h5>
 							</div>
 						</div>
 		    		</div>
@@ -125,7 +125,7 @@
 								Total de reclamações
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="reclamacoes">?</h5>
 							</div>
 						</div>
 					</div>
@@ -136,7 +136,7 @@
 								Total de elogios
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="elogios" >?</h5>
 							</div>
 						</div>
 		    		</div>
@@ -147,7 +147,7 @@
 								Total de sugestões
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="sugestoes">?</h5>
 							</div>
 						</div>
 		    		</div>
@@ -160,7 +160,7 @@
 								Total de despesas
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="despesas">?</h5>
 							</div>
 						</div>
 					</div>
